Server Middleware and frontend base setup.

--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "express": "^4.16.2",
+    "ioredis": "^3.2.2",
+    "lodash": "^4.17.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "request": "^2.87.0",
     "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-jsx": "^1.0.3",
+    "webpack": "^4.10.2",
     "webpack-cli": "^2.0.10"
   }
 }
