Import project settings

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.2",
+    "get-package-json-from-github": "^1.2.1",
     "ioredis": "^3.2.2",
     "lodash": "^4.17.10",
+    "mongodb": "^2.2.33",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
